--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/node": "^14.14.6",
     "@types/prettyjson": "^0.0.29",
     "@types/randomstring": "^1.1.6",
+    "@types/reflect-metadata": "^0.1.0",
     "@types/uniqid": "^5.2.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
