add tasks, users/roles data list view and download

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/ffmpeg": "^1.0.2",
     "@types/file-type": "^10.9.1",
     "@types/is-image": "^3.0.0",
+    "@types/jsonexport": "^3.0.5",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.164",
     "@types/mkdirp": "^1.0.1",
@@ -70,6 +71,7 @@
     "inversify-express-utils": "^6.3.2",
     "is-image": "^3.0.0",
     "is-video": "^1.0.1",
+    "jsonexport": "^3.2.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mkdirp": "^1.0.4",
