--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "@types/multer": "^1.4.4",
     "@types/node": "^14.14.6",
     "@types/prettyjson": "^0.0.29",
+    "@types/qrcode-terminal": "^0.12.2",
     "@types/randomstring": "^1.1.6",
     "@types/reflect-metadata": "^0.1.0",
+    "@types/twilio": "^3.19.3",
     "@types/uniqid": "^5.2.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
@@ -83,13 +85,17 @@
     "morgan-body": "^2.5.2",
     "multer": "^1.4.2",
     "prettyjson": "^1.2.1",
+    "qrcode-terminal": "^0.12.0",
     "querystring": "^0.2.1",
     "randomstring": "^1.1.5",
     "reflect-metadata": "^0.1.13",
     "role-acl": "^4.5.4",
     "serialize-error": "^7.0.1",
     "string-to-color": "^2.2.2",
+    "twilio": "^4.19.0",
     "uniqid": "^5.2.0",
-    "winston": "^3.3.3"
+    "whatsapp-web.js": "^1.23.0",
+    "winston": "^3.3.3",
+    "wwebjs-mongo": "^1.1.0"
   }
 }
