--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "lib": ["es6", "esnext.asynciterable"],
+    "lib": ["es6", "esnext.asynciterable", "es2022.error"],
     "typeRoots": ["./node_modules/@types", "src/types"],
-    "types": ["reflect-metadata"],
+    "types": [],
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "module": "commonjs",
+    // "module": "ES2022",
     "pretty": true,
     "sourceMap": true,
     "outDir": "./build",
@@ -20,5 +21,9 @@
     "skipLibCheck": true
   },
   "include": ["./src/**/*"],
-  "exclude": ["./node_modules", "./.history"]
+  "exclude": ["./node_modules", "./.history"],
+  // "ts-node": {
+  //   "esm": true,
+  //   "experimentalSpecifierResolution": "node",
+  // }
 }
