--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.4",
     "africastalking": "^0.6.7",
     "agenda": "^4.1.3",
     "argon2": "^0.40.3",
